pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: private-reg
spec:
  containers:
  - name: private-reg-container
    image: us-central1-docker.pkg.dev/stable-snowfall-444408-b7/devsecops/helloworld@sha256:215d3f0ab873646d3baed1b74b81156ee9ab9b942e2e52244c749fac96524704
  imagePullSecrets:
  - name: gcp-artifact-registry
